--- a/sass/_page-homepage.scss
+++ b/sass/_page-homepage.scss
@@ -16,7 +16,7 @@
     opacity: 0;
     z-index: 1;
     will-change: opacity, transform;
-    animation: text-pop-up-top 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.1s both;
+    animation: text-pop-up-top 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.1s both;
   }
 
   &__rolling-plate {
